<resources>
    <string name="app_name">calculatorgame</string>
    <string name="main_title">Calculatron\nGame</string>
    <string name="start_game">Начать&#xA0;игру</string>
    <string name="continue_game">Продолжить\nигру</string>
    <string name="clear_progress">Очистить\nпрогресс</string>
    <string name="how_to_play">Как&#xA0;играть?</string>
    <string name="levels_title">Уровни</string>
    <string name="level">Уровень: %d</string>
    <string name="target">Цель: %d</string>
    <string name="moves">Ходы: %d</string>
    <string name="hint">HINT</string>
    <string name="button">Button</string>
    <string name="zero">0</string>
    <string name="level_failed">К&#xA0;сожалению&#xA0;ваши\nходы&#xA0;закончились.</string>
    <string name="level_passed">Уровень&#xA0;пройден!</string>
    <string name="want2retreatqm">Начать&#xA0;заново?</string>
    <string name="want2continueqm">Перейти&#xA0;к\nследующему?</string>
    <string name="want2go2menuqm">В&#xA0;главное\nменю.</string>
    <string name="menu">Меню.</string>
    <string name="navigate_back">Назад</string>
</resources>