<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/calculatorTextNoSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bStart"
        style="@style/calculatorButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="124dp"
        android:text="@string/start_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/bClearProgress"
        style="@style/calculatorButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/clear_progress"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/bStart"
        app:layout_constraintStart_toStartOf="@+id/bStart"
        app:layout_constraintTop_toBottomOf="@+id/bStart" />

    <Button
        android:id="@+id/bGuide"
        style="@style/calculatorButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/how_to_play"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/bClearProgress"
        app:layout_constraintStart_toStartOf="@+id/bClearProgress"
        app:layout_constraintTop_toBottomOf="@+id/bClearProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>