<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fireBrick"
    tools:context=".LevelFailedActivity">

    <TextView
        android:id="@+id/tvRes"
        style="@style/calculatorTextNoSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_failed"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <Button
        android:id="@+id/bCont"
        style="@style/calculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/want2retreatqm"
        app:layout_constraintEnd_toEndOf="@+id/tvRes"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/tvRes"
        app:layout_constraintTop_toBottomOf="@+id/tvRes" />

    <Button
        android:id="@+id/bToMainMenu"
        style="@style/calculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/want2go2menuqm"
        app:layout_constraintEnd_toEndOf="@+id/bCont"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/bCont"
        app:layout_constraintTop_toBottomOf="@+id/bCont" />
</androidx.constraintlayout.widget.ConstraintLayout>