<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chocolate"
    tools:context=".LevelMenuActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/calculatorTextNoSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/bCont"
        style="@style/calculatorButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:text="@string/continue_game"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/bToMainMenu"
        style="@style/calculatorButton"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:text="@string/want2go2menuqm"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/bCont"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bCont"
        app:layout_constraintTop_toBottomOf="@+id/bCont" />

</androidx.constraintlayout.widget.ConstraintLayout>