<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bone"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calcInterface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="60"
        android:background="@drawable/calculator_interface_fullsize">

        <TextView
            android:id="@+id/tvTextMoves"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textColor="@color/paleGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/tvTextTarget"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/target"
            android:textColor="@color/paleGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/tvTextCurrentLvl"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815" />

        <TextView
            android:id="@+id/tvMoves"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/zero"
            android:textColor="@color/paleGreen"
            app:layout_constraintBottom_toBottomOf="@+id/tvTextMoves"
            app:layout_constraintStart_toEndOf="@+id/tvTextMoves"
            app:layout_constraintTop_toTopOf="@+id/tvTextMoves"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTarget"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero"
            android:textColor="@color/paleGreen"
            app:layout_constraintBottom_toBottomOf="@+id/tvTextTarget"
            app:layout_constraintStart_toEndOf="@+id/tvTextTarget"
            app:layout_constraintTop_toTopOf="@+id/tvTextTarget"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvStart"
            style="@style/technoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.682" />

        <TextView
            android:id="@+id/tvCurrentLvl"
            style="@style/calculatorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/zero"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tvTextCurrentLvl"
            app:layout_constraintStart_toEndOf="@+id/tvTextCurrentLvl"
            app:layout_constraintTop_toTopOf="@+id/tvTextCurrentLvl"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:paddingBottom="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b1"
                style="@style/calculatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                tools:ignore="VisualLintButtonSize" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/calculatorButton"
                android:id="@+id/b12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33" />

        </TableRow>
    </TableLayout>


</LinearLayout >